--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="../src/styles/css/bootstrap.min.css">
-    <title>React App</title>
+    <title>Tofaanga</title>
   </head>
   <body>
   <div>
@@ -28,7 +28,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-
   </div>
   </body>
 </html>
