--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <title>Tofaanga</title>
   </head>
   <body>
-  <div>
+  <div class="container">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
